@@ -3,15 +3,21 @@ package fuzs.puzzleslib.neoforge.impl.config;
 import com.mojang.datafixers.util.Either;
 import com.mojang.datafixers.util.Unit;
 import fuzs.puzzleslib.api.config.v3.ConfigCore;
+import fuzs.puzzleslib.api.core.v1.ModLoaderEnvironment;
+import fuzs.puzzleslib.impl.PuzzlesLib;
 import fuzs.puzzleslib.impl.config.ConfigDataHolderImpl;
 import fuzs.puzzleslib.impl.config.ConfigHolderImpl;
 import fuzs.puzzleslib.neoforge.api.core.v1.NeoForgeModContainerHelper;
 import net.neoforged.bus.api.IEventBus;
 import net.neoforged.fml.ModContainer;
+import net.neoforged.fml.config.ConfigTracker;
 import net.neoforged.fml.config.ModConfig;
 import net.neoforged.fml.event.config.ModConfigEvent;
 import org.jetbrains.annotations.Nullable;
 
+import java.lang.invoke.MethodHandles;
+import java.lang.reflect.Method;
+import java.nio.file.Path;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.function.Supplier;
@@ -24,12 +30,14 @@ public class NeoForgeConfigHolderImpl extends ConfigHolderImpl {
 
     @Override
     protected <T extends ConfigCore> ConfigDataHolderImpl<T> client(Supplier<T> supplier) {
-        return new NeoForgeConfigDataHolderImpl<>(ModConfig.Type.CLIENT, supplier);
+        // TODO migrate to startup config type for 1.20.6
+        return new NeoForgeConfigDataHolderImpl<>(ModConfig.Type.CLIENT, "client", supplier);
     }
 
     @Override
     protected <T extends ConfigCore> ConfigDataHolderImpl<T> common(Supplier<T> supplier) {
-        return new NeoForgeConfigDataHolderImpl<>(ModConfig.Type.COMMON, supplier);
+        // TODO migrate to startup config type for 1.20.6
+        return new NeoForgeConfigDataHolderImpl<>(ModConfig.Type.COMMON, "common", supplier);
     }
 
     @Override
@@ -58,8 +66,12 @@ public class NeoForgeConfigHolderImpl extends ConfigHolderImpl {
         private ModConfig modConfig;
 
         protected NeoForgeConfigDataHolderImpl(ModConfig.Type configType, Supplier<T> supplier) {
-            super(configType.extension(), supplier);
-            this.configType = configType;
+            this(configType, configType.extension(), supplier);
+        }
+
+        protected NeoForgeConfigDataHolderImpl(ModConfig.Type type, String configTypeName, Supplier<T> supplier) {
+            super(configTypeName, supplier);
+            this.configType = type;
         }
 
         @Override
@@ -74,17 +86,30 @@ public class NeoForgeConfigHolderImpl extends ConfigHolderImpl {
         }
 
         public void onModConfig(ModConfig modConfig, boolean isLoading, String eventType) {
+            // null config must be permitted for config loading as the event is triggered during construction of ModConfig (before the field can even be set)
             if (modConfig.getType() == this.configType && (this.modConfig == null || modConfig == this.modConfig)) {
                 super.onModConfig(modConfig.getModId(), isLoading, eventType);
             }
         }
 
         public void register(String modId) {
-            Objects.requireNonNull(this.config, "Attempting to register invalid config of type %s".formatted(this.configType.extension()));
-            if (this.modConfig != null) throw new IllegalStateException(String.format("Config for type %s has already been registered!", this.configType.extension()));
+            Objects.requireNonNull(this.config, "Attempting to register invalid config of type %s".formatted(this.configTypeName));
+            if (this.modConfig != null) throw new IllegalStateException(String.format("Config for type %s has already been registered", this.configTypeName));
             ModContainer modContainer = NeoForgeModContainerHelper.getModContainer(modId);
             this.modConfig = new ModConfig(this.configType, this.buildSpec(), modContainer, this.fileName.apply(modId));
             modContainer.addConfig(this.modConfig);
+            // TODO remove after migrating to startup config type for 1.20.6
+            if (this.configType != ModConfig.Type.SERVER) {
+                try {
+                    Method method = ConfigTracker.class.getDeclaredMethod("openConfig", ModConfig.class, Path.class, Path.class);
+                    method.setAccessible(true);
+                    MethodHandles.lookup().unreflect(method).invoke(ConfigTracker.INSTANCE, this.modConfig,
+                            ModLoaderEnvironment.INSTANCE.getConfigDirectory(), null
+                    );
+                } catch (Throwable throwable) {
+                    PuzzlesLib.LOGGER.warn("Unable to load {} config for mod {} early", this.configTypeName, modId, throwable);
+                }
+            }
         }
     }
 }
